--- a/public/others/enigma/privacy-policy.html
+++ b/public/others/enigma/privacy-policy.html
@@ -1,89 +1,112 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        line-height: 1.6;
+      }
 
-<head>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      line-height: 1.6;
-    }
+      h1 {
+        font-size: 24px;
+      }
 
-    h1 {
-      font-size: 24px;
-    }
+      h2 {
+        font-size: 20px;
+      }
 
-    h2 {
-      font-size: 20px;
-    }
+      p {
+        margin-bottom: 10px;
+      }
 
-    p {
-      margin-bottom: 10px;
-    }
+      .section-title {
+        margin-top: 30px;
+      }
 
-    .section-title {
-      margin-top: 30px;
-    }
+      .contact-info {
+        margin-top: 50px;
+      }
 
-    .contact-info {
-      margin-top: 50px;
-    }
+      .footer {
+        font-size: 12px;
+        margin-top: 50px;
+        text-align: center;
+      }
+    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+  </head>
 
-    .footer {
-      font-size: 12px;
-      margin-top: 50px;
-      text-align: center;
-    }
-  </style>
-</head>
+  <body>
+    <h1>Privacy Policy for Enigma App</h1>
 
-<body>
-  <h1>Privacy Policy for Enigma App</h1>
+    <h2>1. Information We Collect</h2>
+    <p>We collect the following information:</p>
+    <ul>
+      <li>Email</li>
+      <li>First Name</li>
+      <li>Last Name</li>
+    </ul>
 
-  <h2>1. Information We Collect</h2>
-  <p>We collect the following information:</p>
-  <ul>
-    <li>Email</li>
-    <li>First Name</li>
-    <li>Last Name</li>
-  </ul>
+    <h2>2. Use of Collected Information</h2>
+    <p>The information we collect is used for the following purposes:</p>
+    <ul>
+      <li>To provide personalized services and improve user experience</li>
+      <li>To communicate with users and respond to inquiries</li>
+      <li>To send periodic emails regarding app updates and promotions</li>
+    </ul>
 
-  <h2>2. Use of Collected Information</h2>
-  <p>The information we collect is used for the following purposes:</p>
-  <ul>
-    <li>To provide personalized services and improve user experience</li>
-    <li>To communicate with users and respond to inquiries</li>
-    <li>To send periodic emails regarding app updates and promotions</li>
-  </ul>
+    <h2>3. Data Protection and Security</h2>
+    <p>
+      We implement reasonable security measures to protect user data from
+      unauthorized access, alteration, disclosure, or destruction.
+    </p>
 
-  <h2>3. Data Protection and Security</h2>
-  <p>We implement reasonable security measures to protect user data from unauthorized access, alteration, disclosure, or destruction.</p>
+    <h2>4. Data Retention</h2>
+    <p>
+      We retain user data for as long as necessary to fulfill the purposes
+      outlined in this Privacy Policy, or as required by law.
+    </p>
 
-  <h2>4. Data Retention</h2>
-  <p>We retain user data for as long as necessary to fulfill the purposes outlined in this Privacy Policy, or as required by law.</p>
+    <h2>5. User Rights</h2>
+    <p>Users have the following rights:</p>
+    <ul>
+      <li>The right to access and obtain a copy of their personal data</li>
+      <li>
+        The right to request the deletion or removal of their personal data
+      </li>
+      <li>The right to update or correct their personal data</li>
+    </ul>
+    <p>
+      Users can contact our support team at christiangrace@hotmail.co.uk to
+      exercise their rights or request assistance.
+    </p>
 
-  <h2>5. User Rights</h2>
-  <p>Users have the following rights:</p>
-  <ul>
-    <li>The right to access and obtain a copy of their personal data</li>
-    <li>The right to request the deletion or removal of their personal data</li>
-    <li>The right to update or correct their personal data</li>
-  </ul>
-  <p>Users can contact our support team at christiangrace@hotmail.co.uk to exercise their rights or request assistance.</p>
+    <h2>6. Third-Party Services</h2>
+    <p>
+      We may use third-party services that collect, monitor, and analyze user
+      data to improve our app's functionality and user experience.
+    </p>
 
-  <h2>6. Third-Party Services</h2>
-  <p>We may use third-party services that collect, monitor, and analyze user data to improve our app's functionality and user experience.</p>
+    <h2>7. Updates to the Privacy Policy</h2>
+    <p>
+      We reserve the right to update or modify this Privacy Policy at any time.
+      Users will be notified of any changes through the app or via email.
+    </p>
 
-  <h2>7. Updates to the Privacy Policy</h2>
-  <p>We reserve the right to update or modify this Privacy Policy at any time. Users will be notified of any changes through the app or via email.</p>
+    <div class="contact-info">
+      <p>
+        If you have any questions or concerns about our Privacy Policy, please
+        contact our support team at christiangrace@hotmail.co.uk.
+      </p>
+    </div>
 
-  <div class="contact-info">
-    <p>If you have any questions or concerns about our Privacy Policy, please contact our support team at christiangrace@hotmail.co.uk.</p>
-  </div>
-
-  <div class="footer">
-    <p>By using Enigma, you acknowledge and agree to the terms outlined in this Privacy Policy.</p>
-  </div>
-</body>
-
+    <div class="footer">
+      <p>
+        By using Enigma, you acknowledge and agree to the terms outlined in this
+        Privacy Policy.
+      </p>
+    </div>
+  </body>
 </html>
