Update privacy policy

--- a/public/others/enigma/privacy-policy.html
+++ b/public/others/enigma/privacy-policy.html
@@ -54,7 +54,10 @@
     <ul>
       <li>To provide personalized services and improve user experience</li>
       <li>To communicate with users and respond to inquiries</li>
-      <li>To send periodic emails regarding app updates and promotions</li>
+      <li>
+        To send periodic emails regarding app updates and promotions on new
+        products and/or services
+      </li>
     </ul>
 
     <h2>3. Data Protection and Security</h2>
